Always show scrollbar to prevent layout jitter

--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600');
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   min-width: 320px;
